@@ -1,3 +1,9 @@
+2015-11-03  Evgeny Stupachenko  <evstupac@gmail.com>
+
+	* multiple_target.c (create_dispatcher_calls): Add target check
+	on ifunc.
+	(create_target_clone): Change assembler name for versioned declarations.
+
 2015-11-03  Thomas Schwinge  <thomas@codesourcery.com>
 	    Chung-Lin Tang  <cltang@codesourcery.com>
 
